crates/mabo-parser/tests/inputs/invalid/struct_name.mabo
struct sample {
    value: u32 @1,
}
